A few changes … I've lost track of what changed

--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -20,7 +20,7 @@
       <item>
        <widget class="QLabel" name="statusLabel">
         <property name="text">
-         <string>Loading ...</string>
+         <string>Loading …</string>
         </property>
         <property name="textFormat">
          <enum>Qt::RichText</enum>
