--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -16,7 +16,7 @@
   <widget class="QWidget" name="container">
    <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,0">
     <item>
-     <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,0,0,0">
+     <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,0,0">
       <item>
        <widget class="QLabel" name="statusLabel">
         <property name="text">
@@ -39,27 +39,7 @@
          <string>Mute</string>
         </property>
         <property name="icon">
-         <iconset theme="audio-input-microphone">
-          <normaloff>.</normaloff>.</iconset>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QSlider" name="volumeSlider">
-        <property name="maximum">
-         <number>10</number>
-        </property>
-        <property name="pageStep">
-         <number>5</number>
-        </property>
-        <property name="value">
-         <number>10</number>
-        </property>
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="tickPosition">
-         <enum>QSlider::NoTicks</enum>
+         <iconset theme="audio-input-microphone"/>
         </property>
        </widget>
       </item>
@@ -99,7 +79,7 @@
          <x>0</x>
          <y>0</y>
          <width>780</width>
-         <height>489</height>
+         <height>478</height>
         </rect>
        </property>
       </widget>
@@ -114,7 +94,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>20</height>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
@@ -173,8 +153,7 @@
   </action>
   <action name="action_Quit">
    <property name="icon">
-    <iconset theme="window-close">
-     <normaloff>.</normaloff>.</iconset>
+    <iconset theme="window-close"/>
    </property>
    <property name="text">
     <string>&amp;Quit</string>
